# OpenImage

./: .gitignore  LICENSE  README.md  build.gradle  buildvar.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  androiddev  build.gradle
app/src/androidTest/java/com/cwdx/opensrc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: base_model_shader.yml  base_shader.yml  blur_shader.yml  color_invert_shader.yml  default_shader.yml  exposure_shader.yml  fire_shader.yml  font_shader.yml  gamma_shader.yml  grayscale_shader.yml  hue_shader.yml  monochrome_shader.yml  mosaic_shader.yml  oes_shader.yml  opacity_shader.yml  polygon_shader.yml  rgb_shader.yml  rgba2gray_shader.yml  sharpen_shader.yml  time_color_shader.yml  whirlpool_shader.yml  white_balance_shader.yml
app/src/main/cpp/core/include/jni/: JniUtils.hpp  PreviewController.hpp
app/src/main/cpp/core/include/render/: Flow.hpp  GLRender.hpp  RenderObserver.hpp
app/src/main/cpp/core/include/res/: IRenderText.hpp  Printer.hpp  ResHub.hpp  ResManager.hpp  Shader.hpp  SquareModel.hpp  TextInfo.hpp  YamlParse.hpp
app/src/main/cpp/core/include/softarch/: Buffer.hpp  ComType.hpp  Constants.hpp  GL3Ext.hpp  GLThread.hpp  GLUtils.hpp  IComFunc.hpp  IMsg.hpp  IThreadFunc.hpp  IThreadPoster.hpp  Math.hpp  Msg.hpp  Observer.hpp  PreviewControllerCallback.hpp  SingleThreadPool.hpp  SyncQueue.hpp  Task.hpp  ThreadPool.hpp  VarType.hpp  Variable.hpp  ffmpeglib.hpp  std.hpp
app/src/main/cpp/core/include/utils/: FpsStatics.hpp  Log.hpp  Utils.hpp
app/src/main/cpp/core/jni/: PreviewController.cpp  jniBridge.cpp
app/src/main/cpp/core/process/ar/: CalibrateCamera.cpp  Marker.cpp  MarkerAR.cpp
app/src/main/cpp/core/process/base/: BufferProcessTask.cpp  NormalProcessTask.cpp  PixelReader.cpp  ProcessBuffers.cpp  ProcessFactory.cpp  ProcessPipe.cpp  ProcessTextures.cpp  RGBAToGray.cpp  WorkerFlow.cpp
app/src/main/cpp/core/process/facedetector/: CascadeClassifierWrap.cpp  FaceDetector.cpp
app/src/main/cpp/core/render/: Flow.cpp  GLRender.cpp
app/src/main/cpp/core/render/copier/: Capturer.cpp  Copier.cpp  Drawer.cpp  OESCopier.cpp  Recorder.cpp  Surface.cpp
app/src/main/cpp/core/render/egl/: EGLCore.cpp
app/src/main/cpp/core/render/filter/: FilterCom.cpp  FilterFactory.cpp  FilterPipe.cpp
app/src/main/cpp/core/render/model/: BaseModel.cpp
app/src/main/cpp/core/render/polygon/: Polygon.cpp  PolygonDrawer.cpp  (+1 more)
app/src/main/cpp/core/res/: Printer.cpp  ResManager.cpp  Shader.cpp  SquareModel.cpp
app/src/main/cpp/core/softarch/: GLThread.cpp  SingleThreadPool.cpp  ThreadPool.cpp
app/src/main/cpp/core/utils/: Log.cpp
app/src/main/res/anim/: view_display_anim.xml  view_display_set_anim.xml  view_hide_anim.xml
app/src/main/res/drawable/: ic_app_entry_1.xml  ic_calibrate_camera.xml  ic_camera_ai.xml  ic_camera_beauty.xml  ic_camera_capture.xml  ic_camera_live.xml  ic_camera_photo.xml  ic_camera_photography.xml  ic_camera_record.xml  ic_camera_recording.xml  ic_camera_settings.xml  ic_camera_switch.xml  ic_flash_always.xml  ic_flash_auto.xml  ic_flash_off.xml  ic_flash_on.xml  ic_hdr_auto.xml  ic_hdr_off.xml  ic_hdr_on.xml  ic_hdr_strong.xml  ic_hdr_weak.xml  ripple_bg.xml  ripple_bg_base.xml  round_shape.xml
app/src/main/res/layout/: activity_main.xml  fragment_camera2_preview.xml  fragment_camerax.xml  fragment_mediacodec.xml  fragment_opengl.xml  fragment_settings.xml  view_btns_layout.xml  view_camera_flash.xml  view_camera_hdr.xml  view_camera_mode.xml  view_camera_param.xml  view_camera_param_shortkey.xml  view_camera_settings.xml  view_chars_layout.xml  view_seekbar_layout.xml  view_text_item.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
core/src/main/cpp/: CMakeLists.txt
core/src/main/cpp/include/jni/: JniUtils.hpp  PreviewController.hpp
core/src/main/cpp/include/render/: Flow.hpp  GLRender.hpp  RenderObserver.hpp
core/src/main/cpp/include/res/: IRenderText.hpp  Printer.hpp  ResHub.hpp  ResManager.hpp  Shader.hpp  SquareModel.hpp  TextInfo.hpp  YamlParse.hpp
core/src/main/cpp/include/softarch/: Buffer.hpp  ComType.hpp  Constants.hpp  GL3Ext.hpp  GLThread.hpp  GLUtils.hpp  IComFunc.hpp  IMsg.hpp  IThreadFunc.hpp  IThreadPoster.hpp  Math.hpp  Msg.hpp  Observer.hpp  PreviewControllerCallback.hpp  RingQueue.hpp  SingleThreadPool.hpp  SyncQueue.hpp  Task.hpp  ThreadPool.hpp  VarType.hpp  Variable.hpp  ffmpeglib.hpp  std.hpp
core/src/main/cpp/include/utils/: AlgoMath.hpp  Log.hpp  Utils.hpp
core/src/main/cpp/jni/: PreviewController.cpp  jniBridge.cpp
core/src/main/cpp/process/ar/: CalibrateCamera.cpp  Marker.cpp  MarkerAR.cpp
core/src/main/cpp/process/base/: BufferProcessTask.cpp  NormalProcessTask.cpp  PixelReader.cpp  ProcessBuffers.cpp  ProcessFactory.cpp  ProcessPipe.cpp  ProcessSource.cpp  ProcessTextures.cpp  RGBAToGray.cpp  TextureBuffer.cpp  ThreadBufferProcessTask.cpp  WorkerFlow.cpp
core/src/main/cpp/process/facedetector/: CascadeClassifierWrap.cpp  FaceDetector.cpp  FaceLandmark.cpp  FaceLandmarkDetector.cpp
core/src/main/cpp/process/yolov5/: ObjectDetector.cpp  Yolov5.cpp
core/src/main/cpp/render/: Flow.cpp  GLRender.cpp
core/src/main/cpp/render/copier/: Capturer.cpp  Copier.cpp  Drawer.cpp  OESCopier.cpp  Recorder.cpp  Surface.cpp
core/src/main/cpp/render/egl/: EGLCore.cpp
core/src/main/cpp/render/filter/: FilterCom.cpp  FilterFactory.cpp  FilterPipe.cpp
core/src/main/cpp/render/model/: BaseModel.cpp
core/src/main/cpp/render/polygon/: Polygon.cpp  PolygonDrawer.cpp  PolygonModel.cpp
core/src/main/cpp/render/texture/: GrayscaleTexture.cpp  LuminanceTexture.cpp  NormalTexture.cpp  OESTexture.cpp
core/src/main/cpp/res/: Printer.cpp  ResManager.cpp  Shader.cpp  SquareModel.cpp
core/src/main/cpp/res/font/: Font.cpp  FontGlyph.cpp  FontRender.cpp  FontSquareModel.cpp
core/src/main/cpp/softarch/: Buffer.cpp  GLThread.cpp  SingleThreadPool.cpp  ThreadPool.cpp
core/src/main/cpp/utils/: FpsStatics.cpp  Log.cpp
(+263 files in other folders)
